src/HoriScroll/HoriScroll.css
.horiscroll-instance-container {
  font-family: Arial, Helvetica, sans-serif;
  --horiscroll-container-width: 50vw;
  --horiscroll-gap: 24px;
  --horiscroll-speed-duration: 20s;
  --horiscroll-button-padding: 1rem 0.5rem;
  --horiscroll-inner-list-bg: #023047;
  --horiscroll-li-button-surface: #415a77;
  --horiscroll-text: white;

  width: var(--horiscroll-container-width, 50vw);
  background: var(--horiscroll-inner-list-bg, #023047);
  overflow-x: scroll;
}

.horiscroll-instance-container.with-mask {
  mask: linear-gradient(90deg, transparent, white 5%, white 95%, transparent);
}

.horiscroll-animation-container {
  padding-left: 0 !important;
  padding-right: 0 !important;
  padding-inline: 0;
  overflow-x: scroll;
  width: max-content;
  /* background: var(--horiscroll-inner-list-bg, #023047); */
  color: var(--horiscroll-text, white);
  .material-symbols-outlined {
    font-variation-settings:
      'FILL' 0,
      'wght' 400,
      'GRAD' 0,
      'opsz' 24;
  }
}

/* ==========================================================================
Animation-related CSS
========================================================================== */
.horiscroll-instance-container[data-animated='true'] {
  overflow-x: hidden;
}

.horiscroll-animation-container[data-animated='true']::-webkit-scrollbar {
  display: none; /* Safari and Chrome */
}

.horiscroll-animation-container[data-animated='true'] {
  overflow-x: hidden;
  scrollbar-width: none;
  cursor: grab;
}

/* ==========================================================================
Inner (un)animated list styles
========================================================================== */
ul.horiscroll-inner-list {
  list-style: none;
  padding-inline: 0;
  margin-inline: 0;
  display: flex;
  width: max-content;
  flex-wrap: nowrap;
  gap: var(--horiscroll-gap, 16px) !important;
}

.horiscroll-material-symbols {
  display: flex;
  align-items: center;
  padding: 0 1rem;
}

/* ul.horiscroll-inner-list li[class*='copy'] { */
/* margin: var(--horiscroll-margin, 0.5rem); */
/* width: fit-content; */
/* transform: translateY(10px); */
/* } */

ul.horiscroll-inner-list > * {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

ul.horiscroll-inner-list.is-button li {
  cursor: pointer;
  padding: var(--horiscroll-button-padding, 1rem);
  border-radius: 0.5rem;
  background: var(--horiscroll-li-button-surface);
}

ul.horiscroll-inner-list.is-button li:hover {
  opacity: 0.8;
  filter: alpha(opacity=80);
}

@keyframes horiscroll-scaling {
  from {
    opacity: 0;
    scale: 0.6;
  }
  to {
    opacity: 1;
    scale: 1;
  }
}

@keyframes horiscroll-translate-up {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes horiscroll-translate-down {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

.with-scaling-entering-animation {
  --animation-type: horiscroll-scaling;
}

.translate-up-entering-animation {
  --animation-type: horiscroll-translate-up;
}

.translate-down-entering-animation {
  --animation-type: horiscroll-translate-down;
}

ul.horiscroll-inner-list[class*='entering-animation'] > * {
  animation-duration: 1s;
  animation: var(--animation-type) 1s linear forwards;
  /* animation-timeline: view(20% 40%); */
  /* animation: var(--animation-type) linear both;
  animation-timeline: view(inline auto);
  animation-range: entry 0.0001% contain 0.0001%;
  animation-duration: 1ms; */
}

/* ==========================================================================
Accessability (reduce motion)
========================================================================== */
@media (prefers-reduced-motion) {
  .horiscroll-animation-container[data-animated='true']::-webkit-scrollbar {
    display: initial;
  }

  .horiscroll-instance-container[data-animated='true'] {
    overflow-x: scroll;
  }

  .horiscroll-animation-container[data-animated='true'] {
    overflow-x: scroll;
    cursor: initial;

    /* .horiscroll-inner-list {
      animation: none;
    } */
  }
}

/* @keyframes horiscroll-animate {
  to {
    transform: translate(calc(-50% - var(--horiscroll-gap, 1rem) / 2));
  }
} */

/* .horiscroll-animation-container[data-animated='true']:has(
    *:hover,
    *:active,
    *:focus
  ) {
  .horiscroll-inner-list {
    animation-play-state: paused;
  }
} */

/* .horiscroll-animation-container[data-animated='true'] {
  .horiscroll-inner-list {
    animation: horiscroll-animate var(--horiscroll-speed-duration, 20s) linear
      forwards infinite;
  }
} */

